# RLLBC

./: .gitignore  LICENSE  README.md  environment.yml  new_environment.yml  new_requirements.txt  pyproject.toml  requirements.in  requirements.txt  test_notebooks.bash
.ipynb_checkpoints/: README-checkpoint.md
class_examples/: BlackJack.ipynb  Cartpole_NARX.ipynb  Cartpole_lqr.ipynb  Cliffwalking_SARSA_Q.ipynb  Comparison_MC_vs_TD.ipynb  Dyna-Q_vs_Q-Learning.ipynb  README.md  TD_vs_MC.ipynb  bellman_opt_eq.ipynb  cliffwalking_on_vs_off-policy.ipynb  dp_gridworld.ipynb  dp_gridworld2.ipynb  labels.npy  lin_sys_id_oscillator.ipynb  linear_sarsa.ipynb  markov_process.ipynb  net_notebook.pth  nonlin_approx.ipynb  nonlinear_approximation.ipynb  random_walk.ipynb  recycling_bot_value_function.ipynb  td0_mc_bias_var.ipynb  td0_vs_constant_alpha_mc.ipynb  td0_vs_constant_alpha_mc_rw.ipynb  td_vs_mc_control.ipynb  tic-tac-toe.ipynb  tic_tac_toe.ipynb  variance_pg.py
deep_examples/: 02_ppo.ipynb  03_ppo-simple-adv.ipynb  04_ddpg.ipynb  05_td3.ipynb  a2c-simple-adv.ipynb  a2c.ipynb  ddpg.ipynb  dqn.ipynb  dqn_atari.ipynb  dqn_atari.py  oneStepAC.ipynb  ppo-simple-adv.ipynb  ppo.ipynb  reinforce.ipynb  reinforce_2_A2C.ipynb  reinforce_2_A2C_accum.ipynb  reinforce_advantage.ipynb  reinforce_baseline.ipynb  reinforce_baseline_task.ipynb  reinforce_td_baseline.ipynb  run_test.bash  sac.ipynb  sac_old.ipynb  td3.ipynb  trpo-simple-adv.ipynb  trpo.ipynb
tabular_examples/: MANIFEST.in  README.md  pyproject.toml  setup.py
tabular_examples/.ipynb_checkpoints/: README-checkpoint.md
tabular_examples/.virtual_documents/dynamic_programming/: Untitled.ipynb  policy_iteration.ipynb  value_Iteration.ipynb
tabular_examples/.virtual_documents/tabular_rl/: q-learning.ipynb
tabular_examples/.virtual_documents/tabular_rl/MC/: Untitled.ipynb  every_visit_mc.ipynb  first_visit_mc.ipynb
tabular_examples/.virtual_documents/tabular_rl/TD/: Untitled.ipynb  dyna-q.ipynb  q-learning.ipynb  sarsa.ipynb
tabular_examples/custom_envs/: README.md  __init__.py  _version.py
tabular_examples/custom_envs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tabular_examples/custom_envs/envs/: black_jack.py  cart_pole.py  cart_pole_lqr.py  cart_pole_v2.py  cliff_walking.py  deep_pendulum.py  frozen_lake.py  pendulum.py  recycling_robot.py
tabular_examples/custom_envs/envs/.ipynb_checkpoints/: frozen_lake-checkpoint.py  recycling_robot-checkpoint.py
tabular_examples/dynamic_programming/: Policy_Iteration.py  policy_iteration.ipynb  value_Iteration.ipynb
tabular_examples/dynamic_programming/.ipynb_checkpoints/: policy_iteration-checkpoint.ipynb  value_Iteration-checkpoint.ipynb
tabular_examples/notebooks/: First_visit.py  SARSA.py  Value_Iteration.py
tabular_examples/tabular_rl/: Dyna-Q.py  Every_visit.py  Q_learning.py
tabular_examples/tabular_rl/MC/: Every_visit.py  First_visit.py  every_visit_mc.ipynb  first_visit_mc.ipynb
tabular_examples/tabular_rl/MC/.ipynb_checkpoints/: every_visit_mc-checkpoint.ipynb  first_visit_mc-checkpoint.ipynb
tabular_examples/tabular_rl/TD/: dyna-q.ipynb  q-learning.ipynb  q-learning_summerschool.ipynb  q-learning_summerschool_solution.ipynb  sarsa.ipynb
tabular_examples/tabular_rl/TD/.ipynb_checkpoints/: dyna-q-checkpoint.ipynb  q-learning-checkpoint.ipynb  sarsa-checkpoint.ipynb
(+458 files in other folders)
