[project]
name = "rllbc-library"
version = "0.1.0"
description = "Reinforcement learning environment with Jupyter and Gym support"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64","osx-arm64"]

[tool.pixi.dependencies]
python = "==3.10.18"
ffmpeg = "==7.1.1"

[tool.pixi.pypi-dependencies]
ipykernel = "==6.29.5"
ipympl = "==0.9.7"
ipywidgets = "==8.1.7"
jupyterlab = "==3.6.8"
jupyterlab-lsp = "==4.3.0"
python-lsp-server = "==1.12.2"
jupyterlab-git = "==0.44.0"
screeninfo = "==0.8.1"
box2d = "==2.3.10"
numpy = "==1.23.5"
pandas = "==2.3.0"
tqdm = "==4.67.1"
wandb = "==0.20.1"
seaborn = "==0.13.2"
matplotlib = "==3.10.3"
torch = "==2.2.0"
tensorboard = "==2.19.0"
envkernel = "==1.1.0"
control = "==0.10.1"
scikit-learn = "==1.7.0"
swig = "==4.3.1"
pygame = "==2.6.1"
stable-baselines3 = "==2.1.0"
gymnasium = { version = "==0.29.1", extras = ["atari", "accept-rom-license","other"] }
jupyterlab-tensorboard-pro = "==3.0.0"
PyQt6 = "==6.9.1"
easydict = "==1.13"
nbgrader ="==0.8.5"
shapely="==2.1.1"
numba = "==0.60.0"
pycairo="==1.28.0"
GitPython="==3.1.40"
pytz="==2025.2"
schedule="==1.2.1"
botorch="==0.14.0"
gpytorch="==1.14"
"ruamel.yaml" = "==0.18.14"
custom-envs = { path = "./tabular_examples", editable = true }
