[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_envs"
version = "0.0.2"
description = "Custom environments for reinforcement learning and learning-based control"
authors = [
    { name = "Bernd Frauenknecht", email = "rllbc@dsme.rwth-aachen.de" },
    { name = "Lukas Kesper", email = "rllbc@dsme.rwth-aachen.de" }
]
dependencies = [
    "gymnasium",
    "numpy"
]

[tool.setuptools]
packages = ["custom_envs"]